# Emare

./: CMakeLists.txt
cmake/: dependencies.cmake
emare/: CMakeLists.txt  count_lines_of_code.bat
emare/src/: emare.cpp  epch.hpp
emare/src/engine/application/: application.cpp  application.hpp
emare/src/engine/engine/: engine.cpp  engine.hpp
emare/src/engine/render/: gpu_api_interface.cpp  gpu_api_interface.hpp  renderer.cpp  renderer.hpp  viewport.cpp  viewport.hpp  window.cpp  window.hpp
emare/src/engine/render/vulkan/: vulkan_device.cpp  vulkan_device.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_rendering_api.cpp  vulkan_rendering_api.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
emare/src/engine/utils/: log.hpp  utility.hpp
